# sbox

./: .clang-format  .gitignore  README.md  meson.build  meson_options.txt
examples/add/: main.cc  meson.build
examples/bench/: lib_bench.c  main.cc  meson.build
examples/callback/: lib_callback.c  main.cc  meson.build
examples/inout/: lib_inout.c  main.cc  meson.build
examples/pbox/add/: main.c  meson.build
examples/pbox/bench/: main.c  meson.build
examples/pbox/blocked/: lib_blocked.c  main.c  meson.build
examples/pbox/callback/: host.c  lib_callback.c  meson.build
examples/pbox/identity/: host.c  lib_identity.c  meson.build
examples/pbox/shm/: main.c  meson.build
examples/pbox/threads/: lib_threads.c  main.c  meson.build
examples/shm/: lib_shm.c  main.cc  meson.build
examples/static/: lib_static.c  lib_static.h  main.cc  meson.build
examples/threads/: lib_threads.c  main.cc  meson.build
include/sbox/: lfi.hh  passthrough.hh  process.hh  sbox.hh
src/: sbox_lfi.cc
src/dyfn/: dyfn.c  dyfn.h  dyfn_aarch64.S  dyfn_offsets.h  dyfn_offsets_check.c  dyfn_x86_64.S  sbox_dyfn.c  sbox_dyfn.h  sbox_dyfn_offsets.h  sbox_dyfn_offsets_check.c  sbox_dyfn_x86_64.S
src/pbox/: pbox.c  pbox.h  pbox_internal.h  pbox_procmaps.c  pbox_procmaps.h  pbox_sandbox.c  pbox_seccomp.c  pbox_seccomp.h
subprojects/: lfi-runtime.wrap  libffi.wrap  pbox.wrap
test/: test_arithmetic.inc.cc  test_callbacks.hh  test_callbacks.inc.cc  test_compile_fail.sh  test_fn_handles.inc.cc  test_helpers.hh  test_lfi.cc  test_lfi_arithmetic.cc  test_lfi_callbacks.cc  test_lfi_fn_handles.cc  test_lfi_memory.cc  test_lfi_misc.cc  test_lfi_multi_sandbox.cc  test_lfi_pointers.cc  test_lfi_strings.cc  test_lfi_structs.cc  test_memory.inc.cc  test_misc.inc.cc  test_multi_sandbox.inc.cc  test_passthrough.cc  test_passthrough_arithmetic.cc  test_passthrough_callbacks.cc  test_passthrough_fn_handles.cc  test_passthrough_memory.cc  test_passthrough_misc.cc  test_passthrough_multi.cc  test_passthrough_multi_sandbox.cc  test_passthrough_pointers.cc  test_passthrough_reentrant.cc  test_passthrough_strings.cc  test_passthrough_structs.cc  test_pointers.inc.cc  test_process.cc  test_process_arithmetic.cc  test_process_callbacks.cc  test_process_fn_handles.cc  test_process_memory.cc  test_process_misc.cc  test_process_multi.cc  test_process_multi_sandbox.cc  (+9 more)
test/compile_fail/: raw_callback_arg.cc  raw_pointer_arg.cc  wrong_callback_type.cc  wrong_data_ptr_type.cc
